# oxidx

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/common/: Cargo.toml
examples/common/src/: app.rs  game_timer.rs  lib.rs  upload_buffer.rs  utils.rs
examples/frank-luna/chapter-10-blending/: Cargo.toml
examples/frank-luna/chapter-10-blending/src/: main.rs  shader.hlsl
examples/frank-luna/chapter-10-blending/src/land_and_waves_sample/: frame_resources.rs  mod.rs  render_item.rs  waves.rs
examples/frank-luna/chapter-11-stencil/: Cargo.toml
examples/frank-luna/chapter-11-stencil/src/: light_utils.hlsl  main.rs  shader.hlsl  utils.rs
examples/frank-luna/chapter-11-stencil/src/stencil/: frame_resources.rs  mod.rs  render_item.rs
examples/frank-luna/chapter-4-direct3D-initialization/: Cargo.toml
examples/frank-luna/chapter-4-direct3D-initialization/src/: main.rs
examples/frank-luna/chapter-6-drawing-in-direct3D/: Cargo.toml
examples/frank-luna/chapter-6-drawing-in-direct3D/src/: main.rs  shader.hlsl
examples/frank-luna/chapter-7-drawing-in-direct3D-part-II/: Cargo.toml
examples/frank-luna/chapter-7-drawing-in-direct3D-part-II/src/: frame_resources.rs  main.rs  shader.hlsl  shape_sample.rs
examples/frank-luna/chapter-7-drawing-in-direct3D-part-II/src/land_and_waves_sample/: frame_resources.rs  mod.rs  render_item.rs  waves.rs
examples/frank-luna/chapter-7-drawing-in-direct3D-part-II/src/shape_sample/: frame_resources.rs  mod.rs  render_item.rs
examples/frank-luna/chapter-8-lighting/: Cargo.toml  build.rs
examples/frank-luna/chapter-8-lighting/src/: main.rs  shader.hlsl
examples/frank-luna/chapter-8-lighting/src/land_and_waves_sample/: frame_resources.rs  mod.rs  waves.rs
examples/frank-luna/chapter-9-texturing/: Cargo.toml  build.rs
examples/frank-luna/chapter-9-texturing/src/: shader.hlsl
examples/frank-luna/common/: Cargo.toml
examples/frank-luna/common/src/: app.rs  geometry_generator.rs  geometry_mesh.rs  lib.rs  lights.rs  material.rs  math.rs  texture.rs  upload_buffer.rs  utils.rs
examples/frank-luna/сhapter-6-drawing-in-direct3D/src/: main.rs
examples/hello/: Cargo.toml
examples/hello-world/: Cargo.toml  build.rs
examples/hello-world/src/: main.rs
examples/hello/src/: main.rs
oxidx/: Cargo.toml  README.md  build.rs
oxidx/src/: adapter.rs  blob.rs  command_allocator.rs  command_list.rs  command_queue.rs  command_signature.rs  conv.rs  dds_texture_loader.rs  debug.rs  descriptor_heap.rs  device.rs  device_child.rs  dx.rs  entry.rs  error.rs  ext.rs  factory.rs  heap.rs  info_queue.rs  lib.rs  misc.rs  pageable.rs  pix.rs  prelude.rs  pso.rs  query_heap.rs  reflection.rs  resources.rs  root_signature.rs  swapchain.rs  sync.rs  types.rs  utils.rs
oxidx/src/conv/: enums.rs  flags.rs  structs.rs
oxidx/src/types/: enums.rs  features.rs  flags.rs  structs.rs
src/: adapter.rs  command_list.rs  command_queue.rs  conv.rs  device.rs  error.rs  factory.rs  heap.rs  lib.rs  misc.rs  resources.rs  swapchain.rs  sync.rs  utils.rs
(+6 files in other folders)
