[package]
name = "oxidx"
version = "0.1.1"
edition = "2021"
authors = ["Pavel Agafonov <pavel.agafonov.al@gmail.com>"]
description = """Mid-level D3D12 bindings/wrapper for Rust."""
license = "MIT"
keywords = ["d3d", "d3d12", "directx12", "directx", "dx12"]
categories = ["rendering::graphics-api", "graphics", "game-development", "api-bindings"]
repository = "https://github.com/if0ne/oxidx"
exclude = ["/extern"]

[dependencies.bitflags]
version = "2.5.0"

[dependencies.compact_str]
version = "0.7.1"

[dependencies.smallvec]
version = "1.13.2"
features = ["const_generics"]

[dependencies.strum]
version = "0.26"
features = ["derive"]

[dependencies.thiserror]
version = "1.0.61"

[dependencies.windows]
version = "0.57.0"
features = [
    "Win32_System_LibraryLoader",

    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",

    "Win32_Security",
    "Win32_System_Threading",
]
