[package]
name = "oxidx"
version = "0.9.0"
edition = "2021"
authors = ["Pavel Agafonov <pavel.agafonov.al@gmail.com>"]
description = """Low-level D3D12 wrapper for Rust."""
license = "MIT"
keywords = ["d3d", "d3d12", "directx12", "directx", "dx12"]
categories = [
    "rendering::graphics-api",
    "graphics",
    "game-development",
    "api-bindings",
]
repository = "https://github.com/if0ne/oxidx"

[dependencies]
bitflags = "2.10.0"
bytes = "1.10.1"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",

    "Win32_Security",
    "Win32_System_Threading",
]

[features]
default = ["callback"]

callback = [
    "windows/Win32_System_Diagnostics_Debug",
    "windows/Win32_System_Kernel",
]

pix = [
    "windows/Win32_System_LibraryLoader"
]

[package.metadata.docs.rs]
all-features = true

default-target = "x86_64-pc-windows-msvc"
